Fri May  7 15:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSBundle.m: Modified ([-release]) to avoid unnecessary work
	and to refrain from caching bundles unless they have loaded code
	(or are the main bundle or the gnustep bundle).

Thu May  6 21:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUnarchiver.m: Don't retain/release unless necessary.
	* Source/NSUserDefaults.m: ditto
	* Source/NSNotification.m: ditto
	* Source/NSFileManager.m: ditto
	* Source/NSBundle.m: ditto
	* Source/NSRunLoop.m: ditto
	* Source/NSAutoreleasePool.m: Bugfix in dealloc - would leave count
	of retained objects set high - caused deallocs of nil objects.

Thu May  6 17:06:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSString.m: Minor optimisations - use ([-allocWithZone:])
	* Source/NSGCString.m: ditto
	* Source/NSGDictionary.m: ditto
	* Source/NSArray.m: ditto
	* Source/NSDictionary.m: ditto
	* Source/NSSet.m: ditto
	* Source/NSGCountedSet.m: ditto
	* Source/NSData.m: ditto

Thu May  6 13:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/propList.h: new file
	* Source/NSString.m: include propList.h for property-list parsing.
	* Source/NSGString.m: ditto
	* Source/NSGCString.m: ditto
	* Source/NSTask.m: Minor fixes for win32
	* Source/NSLog.m: ditto
	* Source/NSProcessInfo.m: ditto
	* Source/NSFileManager.m: ditto

1999-04-28  Adam Fedor  <fedor@gnu.org>

	* Source/NSRunLoop.m (aSort): Redefine to take FastArrayItem as
	arguments. 
	* Source/include/FastArray.x (FastArrayInsertionPosition):
	Fully specify sorter function for better type checking.
	(FastArrayCheckSort): Likewise.

1999-04-27  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for sys/mount.h for NSFileManager functions
	on FreeBSD

Fri Apr 23 23:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSCalendarDate.m: Applied bugfixes by Jeremy Bettis