@@ -1,3 +1,13 @@
+Mon May 10  8:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSString.m: ([-rangeOfComposedCharacterSequenceAtIndex:])
+	optimised.
+	* Source/NSGString.m ([-rangeOfComposedCharacterSequenceAtIndex:])
+	implemented.
+	* Source/NSGCString.m ([-rangeOfComposedCharacterSequenceAtIndex:])
+	implemented.
+	* Source/include/NSThread.h: add gcontext ivar.
+
 Fri May  7 15:12:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSBundle.m: Modified ([-release]) to avoid unnecessary work
